Fixing link overflow on static pages

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -1806,7 +1806,11 @@ header .navbar .navbar-collapse ul.nav li a.feedback
   #scrapbookInstructions
     width: 90%
 
+  /* Static pages */
 
+  section
+    a
+      @include word-wrap()
 
 /* SCREEN SIZE: TABLETS */
 
